// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render borderBottom 1`] = `
<div
  class="wp-components-surface css-1kmv1n"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderLeft 1`] = `
<div
  class="wp-components-surface css-1k6abur"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderRight 1`] = `
<div
  class="wp-components-surface css-1asz344"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderTop 1`] = `
<div
  class="wp-components-surface css-oj3439"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borders 1`] = `
<div
  class="wp-components-surface css-1r87r1p"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-surface css-8xvf1i"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render variants 1`] = `
<div
  class="wp-components-surface css-19uqdw8"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;
